--- a/.github/workflows/tf-remote-state.yml
+++ b/.github/workflows/tf-remote-state.yml
@@ -75,14 +75,13 @@ jobs:
 
             echo "🎯 Getting storage account key..."
             STORAGE_ACCOUNT_KEY=$(az storage account keys list --resource-group ${{ vars.RESOURCE_GROUP_NAME }}  --account-name ${{ vars.STORAGE_ACCOUNT_NAME }} --query "[0].value" -o tsv)
-            echo $STORAGE_ACCOUNT_KEY
 
             echo "🎯 Getting storage connection string..."
             STORAGE_ACCOUNT_CONNECTION_STRING=$(az storage account show-connection-string --resource-group ${{ vars.RESOURCE_GROUP_NAME }}  --name ${{ vars.STORAGE_ACCOUNT_NAME }} --query "connectionString"  -o tsv)
             echo $STORAGE_ACCOUNT_CONNECTION_STRING
 
             echo "🎯 Getting storage blob named: " ${{ vars.BLOB_NAME }}
-            STORAGE_BLOB_EXISTS=$(az storage blob exists --name ${{ vars.BLOB_NAME }} --account-name ${{ vars.STORAGE_ACCOUNT_NAME }}  --query exists)
+            STORAGE_BLOB_EXISTS=$(az storage blob exists --name ${{ vars.BLOB_NAME }} --account-name ${{ vars.STORAGE_ACCOUNT_NAME }} --account-key $STORAGE_ACCOUNT_KEY --query exists)
             if [ $STORAGE_BLOB_EXISTS == "false" ]; then
               echo ""
               echo "Storage blob not found. Creating..."
